[gd_scene load_steps=7 format=3 uid="uid://hkc8815f44el"]

[ext_resource type="Script" uid="uid://ctfatsux3jyhq" path="res://src/ui/inventory/selected_furni_window.gd" id="1_prpap"]
[ext_resource type="Texture2D" uid="uid://b60gwyafmkeu4" path="res://assets/icons/colored/cross.png" id="1_tdg6m"]
[ext_resource type="Texture2D" uid="uid://2qohuov6u85g" path="res://assets/floors/4.png" id="3_mewhw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eie6t"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5
anti_aliasing = false

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mewhw"]
color = Color(0.194349, 0.194349, 0.194349, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mewhw"]

[node name="SelectedFurniWindow" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.141
anchor_bottom = 0.16
offset_right = 32.568
offset_bottom = 54.32
theme_override_constants/separation = 10
script = ExtResource("1_prpap")

[node name="SelectedFurniPanel" type="Panel" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_eie6t")

[node name="MarginContainer" type="MarginContainer" parent="SelectedFurniPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SelectedFurniPanel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SelectedFurniPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 120
alignment = 1

[node name="TitleLabel" type="Label" parent="SelectedFurniPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.992157, 0.992157, 0.992157, 1)
text = "Title"

[node name="CloseButton" type="Button" parent="SelectedFurniPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
icon = ExtResource("1_tdg6m")
icon_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SelectedFurniPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_mewhw")

[node name="Panel" type="Panel" parent="SelectedFurniPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxEmpty_mewhw")

[node name="FurniIcon" type="Sprite2D" parent="SelectedFurniPanel/MarginContainer/VBoxContainer/Panel"]
unique_name_in_owner = true
scale = Vector2(2, 2)
texture = ExtResource("3_mewhw")

[node name="ButtonArray" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="UseButton" type="Button" parent="ButtonArray"]
layout_mode = 2
text = "Use"

[node name="TurnButton" type="Button" parent="ButtonArray"]
layout_mode = 2
text = "Turn"

[node name="MoveButton" type="Button" parent="ButtonArray"]
layout_mode = 2
text = "Move"

[connection signal="pressed" from="SelectedFurniPanel/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ButtonArray/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="ButtonArray/TurnButton" to="." method="_on_turn_button_pressed"]
[connection signal="pressed" from="ButtonArray/MoveButton" to="." method="_on_move_button_pressed"]
